--- a/pages/hanshu/hanshu.wxml
+++ b/pages/hanshu/hanshu.wxml
@@ -1,2 +1,3 @@
 <!--pages/hanshu/hanshu.wxml-->
-<text bindtap="swichpages">pages/hanshu/hanshu.wxml</text>
+<text>pages/hanshu/hanshu.wxml</text>
+<button bindtap="swichpages">新世界的大门</button>
